--- a/third.html
+++ b/third.html
@@ -125,7 +125,7 @@
 
   </div>
  <div style="text-align:center; margin-top:30px;">
-  <a href="third.html" style="
+  <a href="birthday.html" style="
     text-decoration:none;
     padding:12px 26px;
     background:#5964e4;
@@ -147,4 +147,5 @@
   });
 </script>
 </body>
+
 </html>
