Change background color and button design
Updated background color and button style in the HTML.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     body {
-      background: linear-gradient(180deg, #84734e, #fff);
+     background-color: rgb(103, 244, 244);
       color: #333;
       min-height: 100vh;
     }
@@ -135,7 +135,7 @@
   <a href="second.html" style="
     text-decoration:none;
     padding:12px 26px;
-    background:#e6a23c;
+   background:#0742f3;
     color:white;
     border-radius:30px;
     font-size:15px;
@@ -154,4 +154,5 @@
 </script>
 </div>
 </body>
+
 </html>
