Update background and button styles in second.html
Changed background color to aqua and updated button color.

--- a/second.html
+++ b/second.html
@@ -16,7 +16,7 @@
     }
 
     body{
-      background:linear-gradient(180deg,#fff,#edc57b);
+       background-color: aqua;
       color:#100f0f;
       min-height:100vh;
     }
@@ -132,7 +132,7 @@
   <a href="third.html" style="
     text-decoration:none;
     padding:12px 26px;
-    background:#e6a23c;
+    background:#3109fa;
     color:white;
     border-radius:30px;
     font-size:15px;
@@ -152,4 +152,5 @@
   });
 </script>
 </body>
+
 </html>
