Change background color and refine styles
Updated the background color and adjusted styles.

--- a/third.html
+++ b/third.html
@@ -10,7 +10,7 @@
       margin:0;
       padding:0;
       font-family: 'Segoe UI', sans-serif;
-      background:#f37bc5;
+    background:#61e7e9;
       color:#333;
     }
 
@@ -149,3 +149,4 @@
 </body>
 
 </html>
+
